--- a/README.adoc
+++ b/README.adoc
@@ -8,8 +8,9 @@ _insert demo gif here_
 
 The core features of Conjure are language agnostic (although it's targeted at Lisps for now), with each language module providing their own tools on top. Here's the language support so far, unchecked items are planned for the future.
 
- * [x] https://clojure.org/[Clojure] over an https://nrepl.org/[nREPL] connection.
- * [x] https://fennel-lang.org/[Fennel] directly within Neovim's process via Lua and https://github.com/Olical/aniseed[Aniseed]
+ * [x] https://fennel-lang.org/[Fennel] inside Neovim via Lua and https://github.com/Olical/aniseed[Aniseed] (which Conjure is written in)
+ * [x] https://clojure.org/[Clojure] over https://nrepl.org/[nREPL]
+ * [ ] https://clojure.org/[Clojure] over https://oli.me.uk/clojure-socket-prepl-cookbook/[prepl]
  * [ ] https://janet-lang.org/[Janet]
  * [ ] https://racket-lang.org/[Racket]
  * [ ] Scheme (Chicken, Chez or Guile? All?)
@@ -23,17 +24,17 @@ Use your favourite plugin manager, mine is https://github.com/junegunn/vim-plug[
 Plug 'Olical/conjure', {'tag': 'v3.0.0'}
 ----
 
-You'll need to be using the latest stable Neovim for all of the features (such as floating windows) to work. If you see errors on launch try checking what version you have against the latest stable release first.
+You'll need to be on the latest stable Neovim for all of the features (such as floating windows) to work. If you see errors, please check what version you have against the latest stable release first.
 
 == Introduction
 
 All further documentation is found within Neovim itself, so hop into Neovim with Conjure installed and execute `:help conjure-intro` to begin your journey.
 
-Good luck and have fun!
-
 == Behind the curtain
 
 Conjure is written entirely in Lua (so it's _fast_) which is compiled from https://fennel-lang.org/[Fennel] by https://github.com/Olical/aniseed[Aniseed] ahead of time. Check out `CONTRIBUTING.adoc` for more on how to work on Conjure using itself, contributions are more than welcome!
+
+Historically Conjure has been a Clojure specific plugin with an entirely different implementation, you can still find that version at https://github.com/Olical/conjure/tree/v2.1.2[v2.1.2].
 
 == Unlicenced
 
