Back to help text, not school

--- a/README.adoc
+++ b/README.adoc
@@ -28,7 +28,7 @@ You'll need to be on the latest stable Neovim for all of the features (such as f
 
 == Getting started
 
-All further documentation is found within Neovim itself, so hop into Neovim with Conjure installed and execute `:ConjureSchool` to begin your journey.
+All further documentation is found within Neovim itself, so hop into Neovim with Conjure installed and execute `:help conjure` to begin your journey.
 
 == Behind the curtain
 
