--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,9 @@ The core features of Conjure are language agnostic (although it's targeted at Li
  * [ ] https://clojure.org/[Clojure] over https://oli.me.uk/clojure-socket-prepl-cookbook/[prepl]
  * [ ] https://janet-lang.org/[Janet]
  * [ ] https://racket-lang.org/[Racket]
+ * [ ] http://lfe.io/[Lisp Flavoured Erlang]
  * [ ] Scheme (Chicken, Chez or Guile? All?)
+ * [ ] Non-Lisp languages and beyond! (when Neovim has tree-sitter)
 
 == Installation
 
@@ -24,17 +26,17 @@ Use your favourite plugin manager, mine is https://github.com/junegunn/vim-plug[
 Plug 'Olical/conjure', {'branch': 'develop'}
 ----
 
-You'll need to be on the latest stable Neovim for all of the features (such as floating windows) to work. If you see errors, please check what version you have against the latest stable release first.
+You'll need to be on the latest stable Neovim for all of the features (such as floating windows) to work. If you see errors, please check your Neovim version before raising an issue.
 
 == Getting started
 
-All further documentation is found within Neovim itself, so hop into Neovim with Conjure installed and execute `:help conjure` to begin your journey.
+All further documentation is found within Neovim itself, so hop into `nvim` with Conjure installed and execute `:help conjure` to begin your journey.
 
 == Behind the curtain
 
 Conjure is written entirely in Lua (no VimL or external processes!) which is compiled from https://fennel-lang.org/[Fennel] by https://github.com/Olical/aniseed[Aniseed] ahead of time. Check out `CONTRIBUTING.adoc` for more on how to work on Conjure using itself, contributions are more than welcome!
 
-Historically Conjure has been a Clojure specific plugin with an entirely different implementation, you can still find that version at https://github.com/Olical/conjure/tree/v2.1.2[v2.1.2].
+Historically, Conjure was Clojure specific with an entirely different implementation, you can still find that version on the https://github.com/Olical/conjure/tree/legacy-jvm[legacy-jvm branch].
 
 == Unlicenced
 
