--- a/README.adoc
+++ b/README.adoc
@@ -30,7 +30,7 @@ You'll need to be on the latest stable Neovim for all of the features (such as f
 
 == Getting started
 
-All further documentation is found within ./doc/conjure.txt[`:help conjure`]. Please do get in touch via http://clojurians.net/[Slack] (`#conjure`), https://gitter.im/Olical/conjure[Gitter] or Twitter (https://twitter.com/OliverCaldwell[@OliverCaldwell]) if you have any questions or issues.
+All further documentation is found within doc/conjure.txt[`:help conjure`]. Please do get in touch via http://clojurians.net/[Slack] (`#conjure`), https://gitter.im/Olical/conjure[Gitter] or Twitter (https://twitter.com/OliverCaldwell[@OliverCaldwell]) if you have any questions or issues.
 
 == Behind the curtain
 
