--- a/README.adoc
+++ b/README.adoc
@@ -4,18 +4,46 @@
 
 Conjure is an interactive environment for evaluating code and inspecting your program.
 
-https://asciinema.org/a/325517[image:https://asciinema.org/a/325517.svg[asciicast]]
-
 The core features of Conjure are language agnostic (although it's targeted at Lisps for now), with each language client providing their own extra tools. Here's the language support so far, unchecked items are planned for the future.
 
- * [x] https://fennel-lang.org/[Fennel] inside Neovim via Lua and https://github.com/Olical/aniseed[Aniseed] (which Conjure is written in)
  * [x] https://clojure.org/[Clojure] over https://nrepl.org/[nREPL]
+ * [x] https://fennel-lang.org/[Fennel] inside Neovim via Lua and https://github.com/Olical/aniseed[Aniseed] (which Conjure is written in)
  * [ ] https://clojure.org/[Clojure] over https://oli.me.uk/clojure-socket-prepl-cookbook/[prepl]
  * [ ] https://janet-lang.org/[Janet]
  * [ ] https://racket-lang.org/[Racket]
  * [ ] http://lfe.io/[Lisp Flavoured Erlang]
  * [ ] Scheme (Chicken, Chez or Guile? All?)
  * [ ] Non-Lisp languages and beyond! (when Neovim has tree-sitter)
+
+== User experience
+
+What does wielding Conjure actually look like? What can you do with it?
+
+https://asciinema.org/a/325517[image:https://asciinema.org/a/325517.svg[asciicast]]
+
+I'll break that asciinema down for you, just in case it was too quick or you couldn't watch it.
+
+ * Once installed, open a file of a supported file type such as `clojure` or `fennel`.
+ * Some languages, such as Clojure, will automatically connect to a runtime environment or give you the commands and mappings to do so yourself.
+ * Then write or navigate to whatever code you want, as you normally would.
+ * When you want to run any part of your file (or the whole thing!), invoke Conjure's various evaluation mappings, such as:
+  * Whole file
+  * Word or symbol under cursor
+  * Form under cursor (a form is just a block of code in matching parenthesis)
+  * Root form (similar, but the outermost pair of parenthesis)
+  * Form at mark (set a normal Neovim mark anywhere in your project, evaluate that form from anywhere)
+  * Visual selection
+  * Motion
+ * Every result is kept in a log buffer that you can access at any time.
+  * The log is a regular buffer you can edit and add more runnable code to.
+  * When you don't have the log open in the foreground, results are briefly displayed in the heads up display (HUD).
+ * You can look up documentation with `K` or go to definition with `gd`.
+ * Support for multiple asynchronous autocompletion frameworks, with https://github.com/Shougo/deoplete.nvim/[deoplete] built in.
+  * Or use Neovim's native `<C-x><C-o>` which is hooked up out of the box.
+
+Conjure allows you to send the right part of your code off for evaluation, see the results, wrap the results in more code and evaluate that. It keeps a log of your actions and results so you don't have to remember them, that context is extremely helpful when you're down the rabbit hole of a bug hunt.
+
+The goal is to give you a tool that lets you effortlessly run whatever you need to while keeping out of your way (but there with context and more information if you need it).
 
 == Installation
 
