--- a/README.adoc
+++ b/README.adoc
@@ -27,19 +27,19 @@ I'll break that asciinema down for you, just in case it was too quick or you cou
  * Some languages, such as Clojure, will automatically connect to a runtime environment or give you the commands and mappings to do so yourself.
  * Then write or navigate to whatever code you want, as you normally would.
  * When you want to run any part of your file (or the whole thing!), invoke Conjure's various evaluation mappings, such as:
-  * Whole file
-  * Word or symbol under cursor
-  * Form under cursor (a form is just a block of code in matching parenthesis)
-  * Root form (similar, but the outermost pair of parenthesis)
-  * Form at mark (set a normal Neovim mark anywhere in your project, evaluate that form from anywhere)
-  * Visual selection
-  * Motion
+ ** Whole file
+ ** Word or symbol under cursor
+ ** Form under cursor (a form is just a block of code in matching parenthesis)
+ ** Root form (similar, but the outermost pair of parenthesis)
+ ** Form at mark (set a normal Neovim mark anywhere in your project, evaluate that form from anywhere)
+ ** Visual selection
+ ** Motion
  * Every result is kept in a log buffer that you can access at any time.
-  * The log is a regular buffer you can edit and add more runnable code to.
-  * When you don't have the log open in the foreground, results are briefly displayed in the heads up display (HUD).
+ ** The log is a regular buffer you can edit and add more runnable code to.
+ ** When you don't have the log open in the foreground, results are briefly displayed in the heads up display (HUD).
  * You can look up documentation with `K` or go to definition with `gd`.
  * Support for multiple asynchronous autocompletion frameworks, with https://github.com/Shougo/deoplete.nvim/[deoplete] built in.
-  * Or use Neovim's native `<C-x><C-o>` which is hooked up out of the box.
+ ** Or use Neovim's native `<C-x><C-o>` which is hooked up out of the box.
 
 Conjure allows you to send the right part of your code off for evaluation, see the results, wrap the results in more code and evaluate that. It keeps a log of your actions and results so you don't have to remember them, that context is extremely helpful when you're down the rabbit hole of a bug hunt.
 
