--- a/README.adoc
+++ b/README.adoc
@@ -8,8 +8,8 @@ The core features of Conjure are language agnostic (although it's targeted at Li
 
  * [x] https://clojure.org/[Clojure] over https://nrepl.org/[nREPL]
  * [x] https://fennel-lang.org/[Fennel] inside Neovim via Lua and https://github.com/Olical/aniseed[Aniseed] (which Conjure is written in)
+ * [x] https://janet-lang.org/[Janet] over https://github.com/janet-lang/spork/#networked-repl[spork/netrepl]
  * [ ] https://clojure.org/[Clojure] over https://oli.me.uk/clojure-socket-prepl-cookbook/[prepl]
- * [ ] https://janet-lang.org/[Janet]
  * [ ] https://racket-lang.org/[Racket]
  * [ ] http://lfe.io/[Lisp Flavoured Erlang]
  * [ ] Scheme (Chicken, Chez or Guile? All?)
