--- a/README.adoc
+++ b/README.adoc
@@ -1,17 +1,10 @@
 ++++
-<div>
+<p align="center">
+<img src="https://user-images.githubusercontent.com/315229/85461491-52638180-b59c-11ea-9bfc-e7a24a3f9b59.png"/>
+</p>
 ++++
 
-== https://oli.me.uk/conversational-software-development/[Conversational software development] for https://neovim.io[Neovim]
-
-https://gitter.im/Olical/conjure?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge[image:https://badges.gitter.im/Olical/conjure.svg[Gitter]] http://clojurians.net[image:https://img.shields.io/badge/chat-clojurians.net%20%23conjure-green[Slack]]
-
-++++
-<img align="right" role="right" src="https://user-images.githubusercontent.com/315229/85461491-52638180-b59c-11ea-9bfc-e7a24a3f9b59.png"/>
-</div>
-++++
-
-'''
+== https://oli.me.uk/conversational-software-development/[Conversational software development] for https://neovim.io[Neovim] https://gitter.im/Olical/conjure?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge[image:https://badges.gitter.im/Olical/conjure.svg[Gitter]] http://clojurians.net[image:https://img.shields.io/badge/chat-clojurians.net%20%23conjure-green[Slack]]
 
 Conjure is an interactive environment for evaluating code and inspecting your program.
 
