--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,11 @@
 </p>
 ++++
 
-== https://oli.me.uk/conversational-software-development/[Conversational software development] for https://neovim.io[Neovim] https://gitter.im/Olical/conjure?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge[image:https://badges.gitter.im/Olical/conjure.svg[Gitter]] http://clojurians.net[image:https://img.shields.io/badge/chat-clojurians.net%20%23conjure-green[Slack]]
+== https://oli.me.uk/conversational-software-development/[Conversational software development] for https://neovim.io[Neovim]
+
+https://gitter.im/Olical/conjure?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge[image:https://badges.gitter.im/Olical/conjure.svg[Gitter]] http://clojurians.net[image:https://img.shields.io/badge/chat-clojurians.net%20%23conjure-green[Slack]]
+
+'''
 
 Conjure is an interactive environment for evaluating code and inspecting your program.
 
