--- a/README.adoc
+++ b/README.adoc
@@ -10,19 +10,26 @@ https://gitter.im/Olical/conjure?utm_source=badge&utm_medium=badge&utm_campaign=
 
 '''
 
-Conjure is an interactive environment for evaluating code and inspecting your program.
+Conjure is an interactive environment for evaluating code within your running program.
 
-The core features of Conjure are language agnostic (although it's targeted at Lisps for now), with each language client providing their own extra tools. Here's the language support so far, unchecked items are planned for the future.
+The core features of Conjure are language agnostic (although it's targeted at Lisps _for now_), with each language client providing their own extra tools. Here's what languages are supported so far, contributions and 3rd party plugins that add clients are highly encouraged!
 
- * [x] https://clojure.org/[Clojure] over https://nrepl.org/[nREPL] (https://github.com/Olical/conjure/wiki/Quick-start:-Clojure[quickstart])
- * [x] https://fennel-lang.org/[Fennel] inside Neovim via Lua and https://github.com/Olical/aniseed[Aniseed] (https://github.com/Olical/conjure/wiki/Quick-start:-Fennel-(Aniseed)[quickstart])
- * [x] https://janet-lang.org/[Janet] over https://github.com/janet-lang/spork/#networked-repl[spork/netrepl] (https://github.com/Olical/conjure/wiki/Quick-start:-Janet-(netrepl)[quickstart])
- * [ ] https://clojure.org/[Clojure] over https://oli.me.uk/clojure-socket-prepl-cookbook/[prepl]
- * [ ] https://racket-lang.org/[Racket]
- * [ ] http://lfe.io/[Lisp Flavoured Erlang]
- * [ ] Scheme (Chicken, Chez or Guile? All?)
- * [ ] Common Lisp
- * [ ] Non-Lisp languages and beyond! (when Neovim has tree-sitter)
+ * https://clojure.org/[Clojure] over https://nrepl.org/[nREPL] (https://github.com/Olical/conjure/wiki/Quick-start:-Clojure[quickstart])
+ * https://fennel-lang.org/[Fennel] inside Neovim via Lua and https://github.com/Olical/aniseed[Aniseed] (https://github.com/Olical/conjure/wiki/Quick-start:-Fennel-(Aniseed)[quickstart])
+ * https://janet-lang.org/[Janet] over https://github.com/janet-lang/spork/#networked-repl[spork/netrepl] (https://github.com/Olical/conjure/wiki/Quick-start:-Janet-(netrepl)[quickstart])
+
+== Clients of tomorrow
+
+These are clients I intend to build eventually or encourage another community member to build and maintain on my behalf. Every language we add creates another bridge between communities, I would like Conjure to be common ground between all of our beloved esoteric REPL based languages.
+
+ * https://clojure.org/[Clojure] over https://oli.me.uk/clojure-socket-prepl-cookbook/[prepl]
+ * https://fennel-lang.org/[Fennel] over https://gitlab.com/technomancy/jeejah/-/tree/master[nREPL] without Aniseed (for Lua scripting outside of Neovim)
+ * https://racket-lang.org/[Racket]
+ * http://lfe.io/[Lisp Flavoured Erlang]
+ * https://github.com/candid82/joker[Joker]
+ * Scheme (https://www.call-cc.org/[Chicken], Chez or Guile? All?)
+ * Common Lisp (https://github.com/Olical/conjure/issues/97[#97])
+ * Non-Lisp languages and beyond! (when Neovim has tree-sitter)
 
 == User experience
 
