--- a/README.adoc
+++ b/README.adoc
@@ -12,6 +12,7 @@ The core features of Conjure are language agnostic (although it's targeted at Li
  * https://clojure.org/[Clojure] over https://nrepl.org/[nREPL] (https://github.com/Olical/conjure/wiki/Quick-start:-Clojure[quickstart])
  * https://fennel-lang.org/[Fennel] inside Neovim via Lua and https://github.com/Olical/aniseed[Aniseed] (https://github.com/Olical/conjure/wiki/Quick-start:-Fennel-(Aniseed)[quickstart])
  * https://janet-lang.org/[Janet] over https://github.com/janet-lang/spork/#networked-repl[spork/netrepl] (https://github.com/Olical/conjure/wiki/Quick-start:-Janet-(netrepl)[quickstart])
+ * https://racket-lang.org/[Racket] over https://gitlab.com/technomancy/ogion[Ogion nREPL] (https://github.com/Olical/conjure/wiki/Quick-start:-Racket-(nREPL)[quickstart])
 
 == User experience
 
@@ -19,7 +20,7 @@ What does wielding Conjure actually look like? What can you do with it?
 
 https://asciinema.org/a/325517[image:https://asciinema.org/a/325517.svg[asciicast]]
 
- * Open a file of a supported file type such as `clojure`, `fennel` or `janet`.
+ * Open a file of a supported file type such as `clojure`, `fennel`, `janet` or `racket`.
  * Some languages, such as Clojure, will automatically connect to your REPL or give you the commands and mappings to do so yourself.
  * Use various mappings to execute the code you're interested in such as the current form, file, buffer or even form at a Neovim mark.
  * Every result is kept in a log buffer that you can access at any time.
@@ -58,6 +59,7 @@ You'll need to be on the latest stable Neovim for all of the features (such as f
  * https://github.com/Olical/conjure/wiki/Quick-start:-ClojureScript-(shadow-cljs)[ClojureScript (shadow-cljs)]
  * https://github.com/Olical/conjure/wiki/Quick-start:-Janet-(netrepl)[Janet (netrepl)]
  * https://github.com/Olical/conjure/wiki/Quick-start:-Fennel-(Aniseed)[Fennel (Aniseed)]
+ * https://github.com/Olical/conjure/wiki/Quick-start:-Racket-(nREPL)[Racket (nREPL)]
  * https://github.com/Olical/conjure/wiki/Frequently-asked-questions[Frequently asked questions]
 
 All further documentation is found within link:doc/conjure.txt[`:help conjure`]. You can also use `:ConjureSchool` to get an interactive introduction to the workflow and mappings Conjure provides.
@@ -72,7 +74,6 @@ These are clients I intend to build eventually or encourage another community me
 
  * https://clojure.org/[Clojure] over https://oli.me.uk/clojure-socket-prepl-cookbook/[prepl]
  * https://fennel-lang.org/[Fennel] over https://gitlab.com/technomancy/jeejah/-/tree/master[nREPL] without Aniseed (for Lua scripting outside of Neovim)
- * https://racket-lang.org/[Racket]
  * http://lfe.io/[Lisp Flavoured Erlang]
  * http://hylang.org/[Hy]
  * https://github.com/candid82/joker[Joker]
