--- a/README.adoc
+++ b/README.adoc
@@ -53,6 +53,10 @@ Plug 'Olical/conjure', {'tag': 'v4.12.0'}
 
 You'll need to be on the latest stable Neovim for all of the features (such as floating windows) to work. If you see errors, please check your Neovim version before raising an issue.
 
+____
+Note: Some issues have been reported when using https://github.com/wbthomason/packer.nvim[packer] to install Conjure and Aniseed. Work has been done to mitigate this, but https://github.com/Olical/conjure/issues/159#issuecomment-757384128[this comment] should help you out if you run into issues.
+____
+
 == Getting started
 
  * https://github.com/Olical/conjure/wiki/Quick-start:-Clojure[Clojure (JVM)]
