--- a/README.adoc
+++ b/README.adoc
@@ -55,6 +55,8 @@ This will temporarily download the plugin, launch Neovim with `:ConjureSchool` r
 
 Requires Neovim 0.5 or newer.
 
+Alternatively you can use https://github.com/Olical/magic-kit[Magic Kit], an opinionated starter kit that includes all sorts of essential tools.
+
 === https://github.com/wbthomason/packer.nvim[packer.nvim]
 
 [source,lua]
