--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,10 @@ The core features of Conjure are language agnostic (although it's targeted at Li
  * https://www.gnu.org/software/guile/[Guile] over a socket file (https://github.com/Olical/conjure/wiki/Quick-start:-Guile-(socket)[quickstart])
  * https://lisp-lang.org/[Common Lisp] over https://www.cliki.net/SWANK[Swank] (https://github.com/Olical/conjure/wiki/Quick-start:-Common-Lisp-(Swank)[quickstart])
 
+You can learn more about the mappings and configuration inside Neovim with `:help conjure`. Each language client also has it's own specific help text under `:help conjure-client-{LANGUAGE}-{TRANSPORT}`, such as `:help conjure-client-clojure-nrepl`, which contains specific mappings and configuration for that client.
+
+You can also get an interactive guide to the core principals and mappings by executing `:ConjureSchool` or by using the "try before you install" script as described further down this page.
+
 == User experience
 
 What does wielding Conjure actually look like? What can you do with it?
